--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -12,6 +13,7 @@
   <body>
     <!--Header Section-->
     <header class="header">
+      <div class="container">
       <h3 class="header__logo"><span class="logo__part">Web</span>Studio</h3>
       <nav class="header__navigation">
         <ul>
@@ -20,18 +22,21 @@
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <div>
-        <ul class="header__contacts">
+      <div class="header__contacts">
+        <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
         </ul>
       </div>
+      </div>
     </header>
+   
     
-    <main class="portfolio__main">
+    <main>
     <!--Button  Section-->
 
     <div class="portfolio-main__buttons">
+      <div class="container">
       <ul class="portfolio__nav">
         <li class="port__btn"><button type="button">All</button></li>
         <li class="port__btn"><button type="button">Web-sites</button></li>
@@ -40,11 +45,14 @@
         <li class="port__btn"><button type="button">Marketing</button></li>
       </ul>
     </div>
+    </div>
 
     <!--Presentation Section-->
 
     <section class="port__content">
-      <div>
+      <div class="container">
+        <div class="portf__cards">
+      <div class="portf__card">
         <img
         src="./images/website2.jpg"
         alt="Web-site"
@@ -53,7 +61,7 @@
         <h3 class="port-content__titles">Technoduck</h3>
         <p class="port-content__text">Web-site</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img 
         src="./images/design.jpg"
         alt="Basketball Poster"
@@ -62,7 +70,7 @@
         <h3 class="port-content__titles">Poster New Orlean vs Golden Star</h3>
         <p class="port-content__text">Design</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img
         src="./images/apps.jpg"
         alt="Restaurant Poster"
@@ -71,7 +79,7 @@
         <h3 class="port-content__titles">Seafood Restaurant </h3>
         <p class="port-content__text">Apps</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img 
         src="./images/marketing.jpg"
         alt="headphones"
@@ -80,7 +88,7 @@
         <h3 class="port-content__titles">Project Prime</h3>
         <p class="port-content__text">Marketing</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img 
         src="./images/box.jpg"
         alt="ring boxes"
@@ -89,7 +97,7 @@
         <h3 class="port-content__titles">Project Boxes</h3>
         <p class="port-content__text">Apps</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img
         src="./images/website.jpg"
         alt="Monitor with an image"
@@ -99,7 +107,7 @@
         <p class="port-content__text">Web-site</p>
     </div>
 
-    <div>
+    <div class="portf__card">
         <img 
         src="./images/book.jpg"
         alt="a book"
@@ -108,7 +116,7 @@
         <h3 class="port-content__titles">Limited Edition</h3>
         <p class="port-content__text">Design</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img 
         src="./images/tag.jpg"
         alt="nametag"
@@ -117,7 +125,7 @@
         <h3 class="port-content__titles">Project LAB</h3>
         <p class="port-content__text">Marketing</p>
     </div>
-    <div>
+    <div class="portf__card">
         <img 
         src="./images/laptop.jpg"
         alt="laptop"
@@ -126,19 +134,24 @@
         <h3 class="port-content__titles">Growing Business</h3>
         <p class="port-content__text">Apps</p>
     </div>
+  </div>
+      </div>
     </section>
 </main>
 
 <!--Footer Section-->
+
 <footer class="footer">
+  <div class="container">
   <h3 class="footer__title"><span class="footer-title__part">Web</span>Studio</h3>
   <address class="footer__address">
     <ul class="footer__contacts">
       <li><p class="footer__text">695 Park Ave, NY 10065, USA</p></li>
       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+      <li class="footer__phone"><a href="tel:+12127724150">+1 212-772-4150</a></li>
     </ul>
   </address>
+</div>
 </footer>
 
   </body>
